
2008-10-20 - Release Version: 0.2.0

	- Updated version to 0.2.0
	- Added support to exclude object members when encoding
  - Add support to enable/disable logging

2008-10-17 - Release Version: 0.2.b.8
  
  - New implementation for is_utf8()
  - (Issue 55) maxObjectDepth Option not working correctly when using TABLE and EXCEPTION Type
  - Bugfix for max[Object|Array]Depth when encoding nested array/object graphs
  - Bugfix for FB::setOptions()

2008-10-16 - Release Version: 0.2.b.7

  - (Issue 45) Truncate dump when string have non utf8 cars
  - (Issue 52) logging will not work when firephp object gets stored in the session.

2008-10-16 - Release Version: 0.2.b.6

  - (Issue 37) Display file and line information for each log message
  - (Issue 51) Limit output of object graphs
  - Bugfix for encoding object members set to NULL|false|''

2008-10-14 - Release Version: 0.2.b.5

  - Updated JsonStream wildfire protocol to be more robust
  - (Issue 33) PHP error notices running demos
  - (Issue 48) Warning: ReflectionProperty::getValue() expects exactly 1 parameter, 0 given

2008-10-08 - Release Version: 0.2.b.4

	- Bugfix for logging objects with recursion

2008-10-08 - Release Version: 0.2.b.3

  - (Issue 43) Notice message in 0.2b2
  - Added support for PHP's native json_encode() if available
  - Revised object encoder to detect object recursion

2008-10-07 - Release Version: 0.2.b.2

  - (Issue 28) Need solution for logging private and protected object variables
  - Added trace() and table() aliases in FirePHP class
  - (Issue 41) Use PHP doc in FirePHP
  - (Issue 39) Static logging method for object oriented API

2008-10-01 - Release Version: 0.2.b.1

  - Added support for error and exception handling
  - Updated min PHP version for PEAR package to 5.2
  - Added version constant for library
  - Gave server library it's own wildfire plugin namespace
  - Migrated communication protocol to Wildfire JsonStream