@@ -2,6 +2,7 @@
 2008-10-20 - Release Version: 0.2.0
 
 	- Updated version to 0.2.0
+	- Switched to using __sleep instead of __wakeup
 	- Added support to exclude object members when encoding
   - Add support to enable/disable logging
 
